--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CefSharp.Common" version="89.0.170" targetFramework="net47" />
+  <package id="CefSharp.OffScreen" version="89.0.170" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
+  <package id="cef.redist.x64" version="89.0.17" targetFramework="net47" />
+  <package id="cef.redist.x86" version="89.0.17" targetFramework="net47" />
 </packages>
