--- a/Launcher/packages.config
+++ b/Launcher/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CefSharp.Common" version="96.0.142" targetFramework="net47" />
-  <package id="CefSharp.OffScreen" version="96.0.142" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
-  <package id="cef.redist.x64" version="96.0.14" targetFramework="net47" />
-  <package id="cef.redist.x86" version="96.0.14" targetFramework="net47" />
+  <package id="CefSharp.Common" version="112.2.70" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="112.2.70" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net47" />
+  <package id="cef.redist.x64" version="112.2.7" targetFramework="net472" />
+  <package id="cef.redist.x86" version="112.2.7" targetFramework="net472" />
 </packages>
